@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc2
 
+	- The lppasswd program was not installed properly by GNU
+	  install when the installer was not root (STR #836)
 	- Updated the cups-lpd man page (STR #843)
 	- Fixed a typo in the cupsd man page (STR #833)
 	- The USB backend now defaults to using the newer
